<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cie_sample_application</name>
  <version>0.0.0</version>
  <description>Sample application to demonstrate the use of cie_thread_configurator and callback_isolated_executor.</description>

  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <maintainer email="atsushi.yano.2@tier4.jp">Atsushi Yano</maintainer>

  <license>Apache License 2.0</license>

  <!-- Original authors -->
  <author email="sykwer@gmail.com">Takahiro Ishikawa-Aso</author>
  <author email="atsushi.yano.2@tier4.jp">Atsushi Yano</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <depend>callback_isolated_executor</depend>
  <depend>cie_thread_configurator</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
